Исправлены замечания ревьюера